Fix dark mode in modals

--- a/public/style.css
+++ b/public/style.css
@@ -34,6 +34,10 @@ input {
   accent-color: var(--text-secondary);
 }
 
+input[type='checkbox'] {
+  accent-color: var(--border);
+}
+
 p,
 h1,
 h2,
@@ -171,11 +175,11 @@ svg * {
 
 .global-modal-overlay:has(.global-modal) {
   visibility: visible;
-  background-color: rgba(0, 0, 0, 0.25);
+  background-color: rgba(0, 0, 0, 0.85);
 }
 
 .global-modal {
-  background-color: white;
+  background-color: var(--white);
   border-radius: 6px;
   border: solid 1px var(--border);
   animation: revealGlobalModal 500ms;
