--- a/src/styles/SettingsModal.scss
+++ b/src/styles/SettingsModal.scss
@@ -41,6 +41,7 @@
   font-size: 1rem;
   outline: none;
   transition: border-color 250ms;
+  background-color: var(--hover);
 
   &:focus {
     border-color: var(--text);
